--- a/cv/cv.html
+++ b/cv/cv.html
@@ -32,8 +32,22 @@
 				</div>
 			
 			</div>
-			<div class="column"><h1>Experience</h1></div>
-			<div class="column"><h1>Skills</h1></div>
+			<div class="column"><h1>Experience</h1>
+				<div class="column">
+					<p>July 2022 to present - Process Automation Engineer</p>
+					<p>July 2006 to July 2022 - Process Automation Technician</p>
+				</div>
+			</div>	
+				
+			<div class="column"><h1>Skills</h1>
+				<div>
+					<p>Project Management</p>
+					<p>Java programming</p>
+					<p>C programming</p>
+					<p>Web design</p>
+				</div>
+			</div>
+			
 		</div>
 	
 	</body>
