--- a/index.html
+++ b/index.html
@@ -31,12 +31,27 @@
 				
 				<br>
 				<i class="fa fa-github iconColor"  style="font-size:36px"></i>
+				<a  href="https://denisregan.github.io/index.html" target="_blank" rel="noopener noreferrer" class="navlink"> github profile </a> </li>
 				<br>
 				<i class="fa fa-linkedin iconColor" style="font-size:36px"></i>
+				<a href="https://www.linkedin.com/in/denis-o-regan1" target="_blank" rel="noopener noreferrer" class="navlink"> linkedIn </a>
+				<br>
 			
 			</div>
 			<div class="main">
-				<h1>Cover letter</h1>
+				<h1></h1>
+				<p>
+
+				Interested in emerging technologies. I did a project on Deep Learning using Linux and Python for my final year project for my Honours degree in Electronic Engineering in which I attained first class honours.
+
+				Added to that study with online courses in Deep Learning via Coursera
+
+				Interested in robotics, process automation and automotive.
+
+				Enthusiastic about Cyber security and it's application to many facets of Technology such as Secure programming, Network security ,PLC security in manufacturing, edge devices etc.
+
+				10+Years  as Support Technician problem solving on high volume automotive manufacturing line involving automation equipment and robotics etc.
+				1.5 years Test engineer experience with Visual Basic.</p>
 			
 			</div>
 		
