--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 	<head>
-		<title> Rock Paper Scissors Game </title>
+		<title>Week 09 Assignment</title>
+		
 	</head>
-	<body>
-	
-		<button onclick="playGame()"> Play rock Paper scissors</button>
-		<script src="script//script.js"></script>
+	<body id="main">
+		<button onclick="printLyrics()">Print lyrics to 99 Bottles</button>
+		
+		<button onclick="playRPS()">Play rock paper scissors</button>
+		
+		<script src="script.js"></script>
+		
 	</body>
-
 </html>
