--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Week 09 Assignment</title>
-		
+		<title>Week 10 assignment</title>
 	</head>
 	<body id="main">
-		<button onclick="printLyrics()">Print lyrics to 99 Bottles</button>
-		
-		<button onclick="playRPS()">Play rock paper scissors</button>
-		
+		<button onclick="enterSubjects()">Q1 Enter subjects</button>
+	
 		<script src="script.js"></script>
-		
 	</body>
+
+
 </html>
