--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<header class="">
 			<div class="navbar">
 				<div class="logo"><a href="#">GUITAR SCHOOL</a></div>
-				<div class="logo"><a href="#" onclick="showDropdown()">COURSES<span><i class="fa fa-angle-down"></i></span></a>
+				<div class=""><a href="#" onclick="showDropdown()">COURSES<span><i class="fa fa-angle-down"></i></span></a>
 					<div id="courses-dropdown" class="">
 						<div class="dropdown-section" >
 							<h4>Courses by level</h4>
@@ -38,7 +38,7 @@
 					</div>
 				</div>
 				
-				<div class="logo"><a href="store/store.html">STORE<span></span></a></div>
+				<div class=""><a href="store/store.html">STORE<span></span></a></div>
 				<div class="join-button"><a href="join/join.html">JOIN</a></div>
 				<div class="Login-button"><a href="login/login.html">LOGIN</a></div>
 			</div>
