--- a/login/login.html
+++ b/login/login.html
@@ -47,7 +47,7 @@
 		<div class="responsive-nav">
 				<div ><a href="#" onclick="showResponsiveMenu()"><span class="fa fa-bars"></span></a></div>
 					<div id="responsive-menu">	
-						
+						<a href="../index.html">Home</a>
 						<a href="../store/store.html">Store</a>
 						<a href="#">Courses</a>
 												
